update random forest

--- a/Decision_Tree_Random_Forest/Sklearn_Decision_Tree_Classifier_Titanic_Survival.ipynb
+++ b/Decision_Tree_Random_Forest/Sklearn_Decision_Tree_Classifier_Titanic_Survival.ipynb
@@ -22,7 +22,7 @@
         "import pandas as pd\r\n",
         "import seaborn as sns\r\n",
         "import numpy as np\r\n",
-        "from sklearn.ensemble import RandomForestClassifier\r\n",
+        "\r\n",
         "from sklearn.metrics import accuracy_score\r\n",
         "from sklearn import preprocessing\r\n",
         "from sklearn import tree"
@@ -38,7 +38,7 @@
           "height": 419
         },
         "id": "lbQ0AEuWwQhB",
-        "outputId": "0d8ffab4-642d-4432-a9bf-834f38cfdb5f"
+        "outputId": "b9cf8877-2459-4f1b-f510-9e44864c3139"
       },
       "source": [
         "dataset = sns.load_dataset('titanic')\r\n",
@@ -321,7 +321,7 @@
           "height": 419
         },
         "id": "RHhX1XZyyEuT",
-        "outputId": "0923c7bd-c830-48c7-f8dd-83de0ee76da0"
+        "outputId": "88a26ef0-ed0e-4e39-eca9-8c14bae9c407"
       },
       "source": [
         "# Note that the survived column and alive column is consider as closely related variable\r\n",
@@ -332,7 +332,7 @@
         "data = dataset.drop(columns=['alive','who','adult_male'])\r\n",
         "data"
       ],
-      "execution_count": 7,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -561,7 +561,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 8
         }
       ]
     },
@@ -572,38 +572,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1mNOdoHdRCmP",
-        "outputId": "4403afee-6d4d-4b06-a344-9ffe325ac629"
+        "outputId": "40e30021-d7d6-451a-b15c-1ee04f4ecd37"
       },
       "source": [
         "data['embarked'].unique()"
-      ],
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array(['S', 'C', 'Q', nan], dtype=object)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 6
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "dfpYM6tUSA4o",
-        "outputId": "8965681a-38c6-453c-ddc7-eec6e932d9b5"
-      },
-      "source": [
-        "data['embark_town'].unique()"
       ],
       "execution_count": 5,
       "outputs": [
@@ -611,7 +583,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array(['Southampton', 'Cherbourg', 'Queenstown', nan], dtype=object)"
+              "array(['S', 'C', 'Q', nan], dtype=object)"
             ]
           },
           "metadata": {
@@ -627,13 +599,41 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "dfpYM6tUSA4o",
+        "outputId": "bfd16104-9774-4993-b064-675609dc65d9"
+      },
+      "source": [
+        "data['embark_town'].unique()"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array(['Southampton', 'Cherbourg', 'Queenstown', nan], dtype=object)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "O4RqDN2jSEMN",
-        "outputId": "df742f18-9aec-4712-c801-351db4fd3e7f"
+        "outputId": "373e689e-7603-4f4c-ae96-8bb40ebf6e63"
       },
       "source": [
         "data['deck'].unique()"
       ],
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -646,7 +646,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 7
         }
       ]
     },
@@ -658,7 +658,7 @@
           "height": 419
         },
         "id": "hUQqaWBOSLkC",
-        "outputId": "68b03b1f-2230-496f-c7a6-f8c5ad981329"
+        "outputId": "69478cdd-1aab-4932-9186-4969f3cc3012"
       },
       "source": [
         "categorical_col = ['sex','embarked','class','alone','embark_town','deck']\r\n",
@@ -906,7 +906,7 @@
           "height": 419
         },
         "id": "FPSDqiZNlRGU",
-        "outputId": "c9ae27e5-9ce2-4a51-f376-4783d55440a7"
+        "outputId": "31fabebc-b5c8-4c76-ef71-70083e5b00f8"
       },
       "source": [
         "le = preprocessing.LabelEncoder()\r\n",
@@ -1155,13 +1155,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uundzQ_bhP-t",
-        "outputId": "924a51df-993e-482f-b6c2-8e3b698a6a29"
+        "outputId": "0e458299-6952-4413-8446-324005cdaa95"
       },
       "source": [
         "# check if any NaN\r\n",
         "data.isna().sum()"
       ],
-      "execution_count": 12,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1185,7 +1185,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 12
+          "execution_count": 11
         }
       ]
     },
@@ -1196,14 +1196,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sIfEXUBpiFT7",
-        "outputId": "515ede7f-9f14-4fca-bb91-2c32c95c438f"
+        "outputId": "14555ef2-c337-498c-faab-8c675938db10"
       },
       "source": [
         "# Impute the age with mean value\r\n",
         "data['age']=data['age'].replace({np.nan:data['age'].mean()})\r\n",
         "data.isna().sum()"
       ],
-      "execution_count": 13,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1227,7 +1227,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 13
+          "execution_count": 12
         }
       ]
     },
@@ -1238,13 +1238,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WFVgMGvoijSJ",
-        "outputId": "713f98e0-6375-488f-de12-9b0248b6c06f"
+        "outputId": "8ea42e1f-27f6-403f-e1f7-84f0c145f14e"
       },
       "source": [
         "# check the data imputation\r\n",
         "data['age']"
       ],
-      "execution_count": 15,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1267,7 +1267,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 15
+          "execution_count": 13
         }
       ]
     },
@@ -1278,7 +1278,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kr2k3SPyxacQ",
-        "outputId": "8aa71535-c498-4666-d5fd-64c3d459b993"
+        "outputId": "242e3adf-eaf2-4008-e676-6f2478ee5407"
       },
       "source": [
         "train_data = data.sample(frac=0.8, random_state=0)\r\n",
@@ -1287,7 +1287,7 @@
         "print('Shape of training data :',train_data.shape)\r\n",
         "print('Shape of testing data :',test_data.shape)"
       ],
-      "execution_count": 16,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -1307,12 +1307,12 @@
           "height": 419
         },
         "id": "YaXrXYQ7wrzp",
-        "outputId": "8041c198-0714-4213-da4f-aef0181c3ddf"
+        "outputId": "de541295-74ed-465e-f8b5-4fe46f7dea53"
       },
       "source": [
         "train_data"
       ],
-      "execution_count": 17,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1541,7 +1541,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 17
+          "execution_count": 15
         }
       ]
     },
@@ -1559,7 +1559,7 @@
         "test_x = test_data.drop(columns=['survived'],axis=1)\r\n",
         "test_y = test_data['survived']"
       ],
-      "execution_count": 18,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -1570,12 +1570,12 @@
           "height": 419
         },
         "id": "HuYeHd8axwmp",
-        "outputId": "e5a71054-5e73-4c91-9a9b-e71a7c60a7ad"
+        "outputId": "d6b10e1a-dd87-480d-ff9b-315b7a170004"
       },
       "source": [
         "train_x"
       ],
-      "execution_count": 19,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1792,7 +1792,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 19
+          "execution_count": 17
         }
       ]
     },
@@ -1803,12 +1803,107 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ac1lO9ZdxxYK",
-        "outputId": "91c1e6cc-ab76-4c34-ccf8-d93f309f801e"
+        "outputId": "f258ce81-f154-4ed7-99f7-0cd6ec15c27f"
       },
       "source": [
         "gini_decision_tree_model = tree.DecisionTreeClassifier(criterion='gini')\r\n",
         "gini_decision_tree_model.fit(train_x, train_y)\r\n",
         "gini_decision_tree_model.score(train_x, train_y)"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9915848527349228"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0cDkDBDojsyl",
+        "outputId": "8c5bda51-f232-4c0f-e441-fcd91ffae741"
+      },
+      "source": [
+        "# Predict if the passanger is survived\r\n",
+        "prediction = gini_decision_tree_model.predict(test_x)\r\n",
+        "prediction"
+      ],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1, 1, 1, 1, 1, 1, 0, 1, 0, 0, 1, 1, 0, 1, 0, 0, 0, 1, 1, 0, 0, 0,\n",
+              "       0, 0, 1, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 0, 0, 1, 0,\n",
+              "       0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 1, 0, 0, 1, 0, 1, 0, 0, 0, 0, 1, 1,\n",
+              "       0, 1, 1, 0, 0, 1, 0, 0, 0, 1, 1, 1, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0,\n",
+              "       0, 0, 1, 1, 0, 0, 0, 0, 0, 1, 1, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0,\n",
+              "       1, 0, 0, 0, 1, 1, 0, 0, 0, 1, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 1,\n",
+              "       0, 0, 1, 0, 0, 0, 1, 0, 0, 1, 1, 0, 0, 0, 0, 0, 1, 1, 1, 1, 0, 1,\n",
+              "       0, 1, 1, 0, 0, 1, 0, 1, 1, 0, 1, 0, 1, 1, 0, 0, 1, 0, 1, 1, 1, 0,\n",
+              "       1, 1])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "c7shdggijyvv",
+        "outputId": "3d8c2a45-bd32-4380-ebeb-f9b0deffbd8a"
+      },
+      "source": [
+        "# check accuracy classification score\r\n",
+        "gini_test_accuracy = accuracy_score(test_y,prediction)\r\n",
+        "print('Gini test accuracy: ', gini_test_accuracy)"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Gini test accuracy:  0.7865168539325843\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "o8cgybdsnU-d",
+        "outputId": "0a48f138-1cfe-4e9e-8875-ee41baaffbc8"
+      },
+      "source": [
+        "entropy_decision_tree_model = tree.DecisionTreeClassifier(criterion='entropy')\r\n",
+        "entropy_decision_tree_model.fit(train_x, train_y)\r\n",
+        "entropy_decision_tree_model.score(train_x, train_y)\r\n",
+        "entropy_prediction = entropy_decision_tree_model.predict(test_x)\r\n",
+        "entropy_prediction"
       ],
       "execution_count": 21,
       "outputs": [
@@ -1816,7 +1911,15 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.9915848527349228"
+              "array([1, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 1, 1, 0, 0, 0,\n",
+              "       0, 0, 1, 0, 0, 0, 1, 1, 0, 0, 1, 0, 0, 0, 1, 1, 1, 1, 0, 1, 1, 0,\n",
+              "       0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 1, 0, 0, 1, 0, 1, 0, 0, 0, 0, 1, 1,\n",
+              "       0, 1, 1, 0, 0, 1, 0, 1, 0, 1, 1, 1, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0,\n",
+              "       0, 0, 1, 1, 0, 0, 0, 0, 0, 1, 1, 0, 0, 1, 0, 1, 0, 0, 0, 0, 1, 0,\n",
+              "       0, 0, 0, 0, 1, 1, 0, 0, 0, 1, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 1,\n",
+              "       0, 0, 1, 0, 0, 0, 1, 0, 0, 1, 1, 0, 1, 0, 0, 0, 1, 1, 1, 1, 0, 1,\n",
+              "       0, 1, 1, 0, 0, 0, 0, 1, 1, 0, 1, 0, 0, 1, 0, 0, 1, 1, 1, 1, 1, 0,\n",
+              "       1, 1])"
             ]
           },
           "metadata": {
@@ -1832,122 +1935,19 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "0cDkDBDojsyl",
-        "outputId": "f04caab7-a6b1-412f-9391-0264d5532342"
-      },
-      "source": [
-        "# Predict if the passanger is survived\r\n",
-        "prediction = gini_decision_tree_model.predict(test_x)\r\n",
-        "prediction"
-      ],
-      "execution_count": 22,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([1, 1, 1, 1, 1, 1, 0, 1, 0, 0, 1, 1, 0, 1, 0, 0, 0, 1, 1, 0, 0, 0,\n",
-              "       0, 0, 1, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 0, 0, 1, 0,\n",
-              "       0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 1, 0, 1, 0, 0, 0, 0, 1, 1,\n",
-              "       0, 1, 1, 0, 0, 1, 0, 0, 0, 1, 1, 1, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0,\n",
-              "       0, 0, 1, 1, 0, 0, 0, 0, 0, 1, 1, 0, 0, 1, 0, 1, 0, 1, 0, 0, 1, 0,\n",
-              "       1, 0, 0, 0, 1, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 1,\n",
-              "       0, 0, 1, 0, 0, 0, 1, 0, 0, 1, 1, 0, 0, 0, 0, 0, 1, 1, 1, 1, 0, 1,\n",
-              "       0, 1, 1, 0, 0, 1, 0, 1, 1, 0, 1, 0, 0, 1, 0, 0, 1, 0, 1, 1, 1, 0,\n",
-              "       1, 1])"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 22
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "c7shdggijyvv",
-        "outputId": "f9f63c3f-557e-4cce-e805-d58f50f94854"
-      },
-      "source": [
-        "# check accuracy classification score\r\n",
-        "gini_test_accuracy = accuracy_score(test_y,prediction)\r\n",
-        "print('Gini test accuracy: ', gini_test_accuracy)"
-      ],
-      "execution_count": 23,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Test accuracy:  0.7808988764044944\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "o8cgybdsnU-d",
-        "outputId": "0ca4861b-3968-45d0-9b14-95fe12ccdf6a"
-      },
-      "source": [
-        "entropy_decision_tree_model = tree.DecisionTreeClassifier(criterion='entropy')\r\n",
-        "entropy_decision_tree_model.fit(train_x, train_y)\r\n",
-        "entropy_decision_tree_model.score(train_x, train_y)\r\n",
-        "entropy_prediction = entropy_decision_tree_model.predict(test_x)\r\n",
-        "entropy_prediction"
-      ],
-      "execution_count": 24,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([1, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 1, 1, 0, 0, 0,\n",
-              "       0, 0, 1, 0, 0, 0, 1, 1, 0, 0, 1, 0, 0, 0, 1, 1, 1, 1, 0, 1, 1, 0,\n",
-              "       0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 1, 0, 0, 1, 0, 1, 0, 0, 0, 0, 1, 1,\n",
-              "       0, 1, 1, 0, 0, 1, 0, 0, 0, 1, 1, 1, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0,\n",
-              "       0, 0, 1, 1, 0, 0, 0, 0, 0, 1, 1, 0, 0, 1, 0, 1, 0, 0, 0, 0, 1, 0,\n",
-              "       0, 0, 0, 0, 1, 1, 0, 0, 0, 1, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 1,\n",
-              "       0, 0, 1, 0, 0, 0, 1, 0, 0, 1, 1, 0, 1, 0, 0, 0, 1, 1, 1, 1, 0, 1,\n",
-              "       0, 1, 1, 0, 0, 0, 0, 1, 1, 0, 1, 0, 0, 1, 0, 0, 1, 1, 1, 1, 1, 0,\n",
-              "       1, 1])"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 24
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
         "id": "PN5dzi9ipKJi",
-        "outputId": "80be289b-e54e-42ef-cbaa-47f1e4a07069"
+        "outputId": "42f0420c-0e6c-4e61-da3f-ffe89334656a"
       },
       "source": [
         "entropy_test_accuracy = accuracy_score(test_y,entropy_prediction)\r\n",
         "print('Entropy test accuracy: ', entropy_test_accuracy)"
       ],
-      "execution_count": 25,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Entropy test accuracy:  0.7752808988764045\n"
+            "Entropy test accuracy:  0.7808988764044944\n"
           ],
           "name": "stdout"
         }
