--- a/Glass-Compound-Analysis/Erbium_Concentration_Classification/MLP_sklearn_Erbium_concentration_classification.ipynb
+++ b/Glass-Compound-Analysis/Erbium_Concentration_Classification/MLP_sklearn_Erbium_concentration_classification.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "name": "MLP_sklearn-Erbium_concentration_classification.ipynb",
-      "provenance": []
+      "provenance": [],
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -41,7 +42,8 @@
         "\n",
         "from sklearn.neural_network import MLPClassifier\n",
         "from sklearn.model_selection import GridSearchCV\n",
-        "from sklearn.metrics import classification_report"
+        "from sklearn.metrics import classification_report\n",
+        "from sklearn.metrics import confusion_matrix"
       ],
       "execution_count": 1,
       "outputs": []
